--- a/questions-page.html
+++ b/questions-page.html
@@ -16,7 +16,7 @@
     <header>
         <h1 class="opaque-background">10 Trick Questions</h1>
     </header>
-    <div class="progress opaque-background hide">
+    <div class="progress opaque-background">
         <div class="mobile result">Q: 1/10 S: 0/10</div>
         <div class="tablet result">Question: 1/10 Score: 0/10</div>
         <div class="desktop result">Question: 1/10 Score: 0 correct, 0 incorrect</div>
@@ -24,14 +24,17 @@
     <main>
         <div class="opaque-background main-div">
             <section>
-                <p>Do you think you have what it takes to answer all questions correctly?</p>
-                <button type="button" class="button start">Start</button>
-            </section>
-            <section> 
-                <div class="results hide">
-                    <p class=" result-score"></p>
-                    <button type="button retake" class="button">Retake Quiz</button>
-                </div>
+                <form>
+                    <p class="question">How many birthdays does the average man have?</p>
+                    <fieldset class="questions">
+                        <legend class="choices"></legend>
+                        <label for="ans-1"><input type="radio" name="options" id="ans-1" value="Answer 1">25</label>
+                        <label for="ans-2"><input type="radio" name="options" id="ans-2" value="Answer 2">40</label>
+                        <label for="ans-3"><input type="radio" name="options" id="ans-3" value="Answer 3">60</label>
+                        <label for="ans-4"><input type="radio" name="options" id="ans-4" value="Answer 4">1</label>
+                        <button type="button check" class="button">Check</button>
+                    </fieldset>
+                </form>
             </section>
         </div>
     </main>
