linked pages together

--- a/answer-page.html
+++ b/answer-page.html
@@ -23,11 +23,13 @@
     </div>
     <main>
         <div class="opaque-background main-div">
-            <section> 
+            <section>
                 <div class="answer">
                     <span class="explination">You're answer was incorrect.</span>
                     <p>Explination: A man is only born once, therefore only have one birthday, correct answer is 1</p>
-                    <button type="button next" class="button">Next</button>
+                    <form action="result-page.html" method="get">
+                        <button type="submit" class="button next">Next</button>
+                    </form>
                 </div>
             </section>
         </div>
