--- a/result-page.html
+++ b/result-page.html
@@ -18,10 +18,12 @@
     </header>
     <main>
         <div class="opaque-background main-div">
-            <section> 
+            <section>
                 <div class="results">
                     <p class=" result-score">You answered 90% of the questions correctly</p>
-                    <button type="button retake" class="button">Retake Quiz</button>
+                    <form action="index.html" method="get">
+                        <button type="submit" class="button retake">Retake Quiz</button>
+                    </form>
                 </div>
             </section>
         </div>
