--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
         <div class="opaque-background main-div">
             <section>
                 <p>Do you think you have what it takes to answer all questions correctly?</p>
-                <button type="button" class="button start">Start</button>
-            </section>
-            <section> 
-                <div class="results hide">
-                    <p class=" result-score"></p>
-                    <button type="button retake" class="button">Retake Quiz</button>
-                </div>
+                <form action="questions-page.html" method="get">
+                <button type="submit" formaction="questions-page.html" class="button start">Start</button>
+                </form>
             </section>
         </div>
     </main>
