--- a/questions-page.html
+++ b/questions-page.html
@@ -24,7 +24,7 @@
     <main>
         <div class="opaque-background main-div">
             <section>
-                <form>
+                <form action="answer-page.html" method="get">
                     <p class="question">How many birthdays does the average man have?</p>
                     <fieldset class="questions">
                         <legend class="choices"></legend>
@@ -32,7 +32,7 @@
                         <label for="ans-2"><input type="radio" name="options" id="ans-2" value="Answer 2">40</label>
                         <label for="ans-3"><input type="radio" name="options" id="ans-3" value="Answer 3">60</label>
                         <label for="ans-4"><input type="radio" name="options" id="ans-4" value="Answer 4">1</label>
-                        <button type="button check" class="button">Check</button>
+                        <button type="submit" class="button check">Check</button>
                     </fieldset>
                 </form>
             </section>
