--- a/questions-page.html
+++ b/questions-page.html
@@ -17,7 +17,7 @@
         <h1 class="opaque-background">10 Trick Questions</h1>
     </header>
     <div class="progress opaque-background">
-        <div class="mobile result">Q: 1/10 S: 0/10</div>
+        <div class="mobile result"></div>
         <div class="tablet result">Question: 1/10 Score: 0/10</div>
         <div class="desktop result">Question: 1/10 Score: 0 correct, 0 incorrect</div>
     </div>
@@ -25,19 +25,22 @@
         <div class="opaque-background main-div">
             <section>
                 <form action="answer-page.html" method="get">
-                    <p class="question">How many birthdays does the average man have?</p>
+                    <p class="question"></p>
                     <fieldset class="questions">
                         <legend class="choices"></legend>
-                        <label for="ans-1"><input type="radio" name="options" id="ans-1" value="Answer 1">25</label>
-                        <label for="ans-2"><input type="radio" name="options" id="ans-2" value="Answer 2">40</label>
-                        <label for="ans-3"><input type="radio" name="options" id="ans-3" value="Answer 3">60</label>
-                        <label for="ans-4"><input type="radio" name="options" id="ans-4" value="Answer 4">1</label>
+                        <label for="ans-1"><input type="radio" name="options" id="ans-1" value="Answer 1"><span class="option-0"></span></label>
+                        <label for="ans-2"><input type="radio" name="options" id="ans-2" value="Answer 2"><span class="option-1"></span></label>
+                        <label for="ans-3"><input type="radio" name="options" id="ans-3" value="Answer 3"><span class="option-2"></span></label>
+                        <label for="ans-4"><input type="radio" name="options" id="ans-4" value="Answer 4"><span class="option-3"></span></label>
                         <button type="submit" class="button check">Check</button>
                     </fieldset>
                 </form>
             </section>
         </div>
     </main>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="index.js"></script>
+    <script src="questions-array.js"></script>
 </body>
 
 </html>
