add validate answer

--- a/questions-page.html
+++ b/questions-page.html
@@ -24,18 +24,30 @@
     <main>
         <div class="opaque-background main-div">
             <section>
-                <form action="answer-page.html" method="get">
-                    <p class="question"></p>
-                    <fieldset class="questions">
-                        <legend class="choices"></legend>
-                        <label for="ans-1"><input type="radio" name="options" id="ans-1" value="Answer 1"><span class="option-0"></span></label>
-                        <label for="ans-2"><input type="radio" name="options" id="ans-2" value="Answer 2"><span class="option-1"></span></label>
-                        <label for="ans-3"><input type="radio" name="options" id="ans-3" value="Answer 3"><span class="option-2"></span></label>
-                        <label for="ans-4"><input type="radio" name="options" id="ans-4" value="Answer 4"><span class="option-3"></span></label>
-                        <button type="submit" class="button check">Check</button>
-                    </fieldset>
+                <form>
+                    <!**action="answer-page.html" method="get" **>
+                        <p class="question"></p>
+                        <fieldset class="questions">
+                            <legend class="choices"></legend>
+                            <label for="ans-1"><input type="radio" name="options" id="ans-1" value="Answer 1"
+                                    required><span class="option-0"></span></label>
+                            <label for="ans-2"><input type="radio" name="options" id="ans-2" value="Answer 2"
+                                    required><span class="option-1"></span></label>
+                            <label for="ans-3"><input type="radio" name="options" id="ans-3" value="Answer 3"
+                                    required><span class="option-2"></span></label>
+                            <label for="ans-4"><input type="radio" name="options" id="ans-4" value="Answer 4"
+                                    required><span class="option-3"></span></label>
+                            <button type="submit" class="button check" id="check">Check</button>
+                        </fieldset>
                 </form>
             </section>
+            <div class="answer hide">
+                <span class="feedback"></span>
+                <p class="explination"></p>
+                <form action="result-page.html" method="get">
+                    <button type="submit" class="button next">Next</button>
+                </form>
+            </div>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
