--- a/questions-page.html
+++ b/questions-page.html
@@ -45,6 +45,7 @@
                 <span class="feedback"></span>
                 <p class="explination"></p>
                 <form action="result-page.html" method="get">
+                    <span id="indicator" class="hide"></span>
                     <button type="submit" class="button next">Next</button>
                 </form>
             </div>
