--- a/result-page.html
+++ b/result-page.html
@@ -20,7 +20,7 @@
         <div class="opaque-background main-div">
             <section>
                 <div class="results">
-                    <p class=" result-score">You answered 90% of the questions correctly</p>
+                    <p class=" result-score"></p>
                     <form action="index.html" method="get">
                         <button type="submit" class="button retake">Retake Quiz</button>
                     </form>
