--- a/questions-page.html
+++ b/questions-page.html
@@ -24,8 +24,7 @@
     <main>
         <div class="opaque-background main-div">
             <section>
-                <form>
-                    <!**action="answer-page.html" method="get" **>
+                <form class="main-questions">
                         <p class="question"></p>
                         <fieldset class="questions">
                             <legend class="choices"></legend>
@@ -41,19 +40,27 @@
                         </fieldset>
                 </form>
             </section>
-            <div class="answer hide">
-                <span class="feedback"></span>
-                <p class="explination"></p>
-                <form action="result-page.html" method="get">
-                    <span id="indicator" class="hide"></span>
-                    <button type="submit" class="button next">Next</button>
-                </form>
-            </div>
+            <section>
+                <div class="answer hide">
+                    <span class="feedback"></span>
+                    <p class="explination"></p>
+                    <form>
+                        <button type="submit" class="button next">Next</button>
+                    </form>
+                </div>
+            </section>
+            <section>
+                <div class="results hide">
+                    <p class="result-score"></p>
+                    <form action="index.html" method="get">
+                        <button type="submit" class="button retake">Retake Quiz</button>
+                    </form>
+                </div>
+            </section>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="index.js"></script>
-    <script src="questions-array.js"></script>
 </body>
 
 </html>
