--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="HTML, CSS Quiz">
     <link href="index.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="#">
-    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 
