added transtion answer

--- a/questions-page.html
+++ b/questions-page.html
@@ -43,10 +43,10 @@
                     <button type="submit" class="button next" id="next" disabled>Next</button>
                 </form>
             </section>
-            <section>
+            <section class="transitioning" id="transitioning">
                 <div class="answer hide">
                     <span class="feedback"></span>
-                    <p class="explination"></p>
+                    <p class="explanation"></p>
                 </div>
             </section>
             <section>
